--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+$primary-color:#2C3E50;
+$second-color: #E74C3C ;
+
+body{
+  background-color: $primary-color;
+  color: $second-color;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+div p{
+  font-family: Arial, Helvetica, sans-serif;
+}
